# matching-engine

./: .gitignore  Cargo.toml  TODO.md  build.rs  config.json  config.toml  main.rs  orderbook.rs  readme.md
.cargo/: config.toml
clientside/: Index.html  SimulatedPriceData.txt  demomode.html
docs/: api.md  api_spec.yml  out_mini.mov
misc_test/: checksum_util.py  client_test.py  grafana_test.py  k6websockets.js  package-lock.json  viz_test.html  viz_test.py  websocket_test.py  websocket_test_v2.py
python_bots/: file_tail_price_enforcer.py
python_bots/randomness_generators/: Audio_RNG.py  JJs_Capacity.py  TS_Brightness.py  TrainTime_Avg.py
randomness_generators/: Audio_RNG.py  JJs_Capacity.py  TS_Brightness.py  TrainTime_Avg.py
src/: Index.html  MonteCarloSim.py  accounts.rs  api_messages.rs  config.rs  connection_server.rs  id_to_ip.csv  lib.rs  logging.rs  macro_calls.rs  main.rs  mappings.rs  message_types.rs  messaging_server.rs  orderbook.rs  parser.rs  server.rs  test_orders.csv  websockets.rs
