[package]
name = "orderbook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# orderbook dependencies
csv = "1.1"
strum = "0.2"
strum_macros = "0.2"
plotters = "0.3"
serde = { version = "1", features = ["derive"] }
# server dependencies
actix-web = "4"
serde_json = {version = "1.0"}
env_logger = "0.10.0"
pretty_env_logger = "0.4.0"
log = "0.4.17"

# testing
tokio = { version = "1", features = ["full"] }


[dependencies.uuid]
version = "1.2.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
[[bin]]
name = "main"
path = "src/main.rs"
